--- a/public/Sass/master.scss
+++ b/public/Sass/master.scss
@@ -1,3 +1,32 @@
+body{
+	background-color:#87EDBD;
+}
+
 h1{
 	text-align: center;
+	a {
+	text-decoration: none;
+	color:white;
+	}
+}
+
+
+	
+#resultslook{
+	border-radius:50px;
+	background-color:#FF462B;
+	margin:25px auto 25px auto;
+
+}
+
+#formlook{
+	border-radius:50px;
+	background-color:#FF462B;
+	margin:25px auto 25px auto;
+
+	form{
+	text-align:center;
+	padding:50px auto 50px auto;
+	}
+
 }
