--- a/public/views/result.html
+++ b/public/views/result.html
@@ -1,11 +1,9 @@
 <body>
 				
 
-				<div id="view" ng-controller="resultController">
+				<div class="resultslook" id="view" ng-controller="resultController">
 
-					<p>
-					There was a kitten named {{displayName}}. {{displayName}} liked {{displayNoun}} for breakfast. {{displayName}} had a {{displayAdjective}}, {{displayAdjective2}} {{displayNoun2}}. {{displayName}} loved to {{displayVerb}} across the living room. {{displayName}} also enjoyed to {{displayVerb2}} in the house.
-					</p>
+					
 
 				</div>
 
