--- a/public/views/form.html
+++ b/public/views/form.html
@@ -3,8 +3,9 @@
 			
 
 
-				<div id = "formlook" ng-controller="formController">
+				<div id="formlook" ng-controller="formController">
 				<!--form for the user search-->
+					<div class="formwrapper">
 					<form>
 						<h3> Name </h3>
 
@@ -21,6 +22,7 @@
 
 						<button ng-click="save()" class="button button-3d button-box button-jumbo"><i class="fa fa-thumbs-up">Go!</i></button>
 					</form>
+					</div>
 				</div>	
 			
 
