--- a/public/Sass/master.scss
+++ b/public/Sass/master.scss
@@ -11,7 +11,21 @@ h1{
 }
 
 
+a{
+ text-decoration:none;
+}
 	
+h1{
+	color:white;
+	text-decoration:none;
+	font-family:'Bungee';
+	span{
+	font-family:'Gravitas One';
+	color:#12B266;
+	}
+}
+
+
 #resultslook{
 	border-radius:50px;
 	background-color:#FF462B;
@@ -23,10 +37,17 @@ h1{
 	border-radius:50px;
 	background-color:#FF462B;
 	margin:25px auto 25px auto;
+ 	padding:50px auto 50px auto;
+ 	
+ 	.formwrapper{
+ 		margin:50px auto 50px auto;
 
-	form{
-	text-align:center;
-	padding:50px auto 50px auto;
-	}
+ 		form{
+		text-align:center;
+		}
+
+ 	}
+	
 
 }
+
