--- a/public/Sass/master.scss
+++ b/public/Sass/master.scss
@@ -1,53 +1,50 @@
 body{
-	background-color:#87EDBD;
+	background-color:white;
 }
 
-h1{
-	text-align: center;
-	a {
+a {
 	text-decoration: none;
-	color:white;
+	color:#04ECFF;
 	}
-}
-
-
-a{
- text-decoration:none;
-}
 	
 h1{
-	color:white;
+	text-align:center;
 	text-decoration:none;
-	font-family:'Bungee';
+	font-family:'Gravitas One';
 	span{
 	font-family:'Gravitas One';
-	color:#12B266;
+	color:#0d97ff;
 	}
+	
 }
 
-
-#resultslook{
-	border-radius:50px;
-	background-color:#FF462B;
-	margin:25px auto 25px auto;
-
+#view{
+	width:75%;
+	margin-left:auto;
+	margin-right:auto;
+	background-color:#0d97ff;
 }
 
 #formlook{
-	border-radius:50px;
-	background-color:#FF462B;
+  	border:dotted black 1px;
 	margin:25px auto 25px auto;
  	padding:50px auto 50px auto;
- 	
+
  	.formwrapper{
+ 		border:dotted black 1px;
  		margin:50px auto 50px auto;
 
  		form{
+ 		color:white;
 		text-align:center;
 		}
 
  	}
 	
+resultslook{
+	margin:25px auto 25px auto;
+
+}
 
 }
 
