--- a/public/css/master.css
+++ b/public/css/master.css
@@ -3,7 +3,7 @@ body {
 
 a {
   text-decoration: none;
-  color: #04ECFF; }
+  color: #04D4E5; }
 
 h1 {
   text-align: center;
@@ -19,14 +19,32 @@ h1 {
   margin-right: auto;
   background-color: #0d97ff; }
 
-#formlook {
+#form {
   border: dotted black 1px;
+  height: 40vw;
   margin: 25px auto 25px auto;
   padding: 50px auto 50px auto; }
-  #formlook .formwrapper {
-    border: dotted black 1px;
-    margin: 50px auto 50px auto; }
-    #formlook .formwrapper form {
-      text-align: center; }
-  #formlook resultslook {
-    margin: 25px auto 25px auto; }
+  #form form {
+    margin-top: 2vw;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center; }
+    #form form input {
+      font-size: 2vw;
+      margin-top: 5vw;
+      width: 75%;
+      height: 5vw; }
+    #form form button {
+      color: white;
+      border: none;
+      background-color: #04D4E5;
+      font-size: 2vw;
+      width: 65%;
+      height: 5vw;
+      margin-top: 5vw; }
+
+#result {
+  border: dotted black 1px;
+  height: 40vw;
+  margin: 25px auto 25px auto;
+  padding: 50px auto 50px auto; }
