--- a/public/views/result.html
+++ b/public/views/result.html
@@ -1,7 +1,7 @@
 <body>
 				
 
-				<div class="resultslook" id="view" ng-controller="resultController">
+				<div id="result" ng-controller="resultController">
 
 					
 
