--- a/public/views/form.html
+++ b/public/views/form.html
@@ -3,26 +3,23 @@
 			
 
 
-				<div id="formlook" ng-controller="formController">
+				<div id="form" ng-controller="formController">
 				<!--form for the user search-->
-					<div class="formwrapper">
 					<form>
-						<h3> Name </h3>
 
-						<input type = text ng-model = "name" />
+						<input type="text" placeholder="name" ng-model="searchWords.name" />
 
-						<h3> Location </h3>
+						<br>
 
-						<input type = text ng-model = "noun" />
+						<input type="text" placeholder="city" ng-model="searchWords.city" />
 
 				
 						<br>
 					<!--button to send results below-->
 
 
-						<button ng-click="save()" class="button button-3d button-box button-jumbo"><i class="fa fa-thumbs-up">Go!</i></button>
+						<button type="submit" ng-click="saveForm(searchWords)">Search</button>
 					</form>
-					</div>
 				</div>	
 			
 
