further css and html tweaks. added logos

--- a/public/Sass/master.scss
+++ b/public/Sass/master.scss
@@ -8,6 +8,7 @@ a {
 	}
 	
 h1{
+	font-size:3vw;
 	text-align:center;
 	text-decoration:none;
 	font-family:'Gravitas One';
@@ -16,6 +17,53 @@ h1{
 	color:#0d97ff;
 	}
 	
+	img{
+		height:3vw;
+		width:3vw;
+	}
+}
+
+#footer {
+	margin-bottom:0px;
+	background-color:white;
+	position: fixed;
+    bottom: 0;
+    width: 100%;
+    list-style-type:none;
+    	
+    #google{
+    	margin-right:90px;
+    }
+
+    #creators{
+    	margin-top:25px;
+    	font-family:sans-serif;
+    	color:#0d97ff;
+    	display:inline-block;
+    	float: left;
+    }
+
+    #about{
+    	margin-top:25px;
+    }
+
+    #powered{
+    	margin-top:25px;
+    }
+
+    .navlinks{
+    	margin-top:5px;
+    	font-family:sans-serif;
+    	margin-right:2vw;
+    	color:#0d97ff;
+    	display:inline-block;
+    	float:right;
+
+    	img{
+    		height:3vw;
+    		width:3vw;
+    	}
+    } 
 }
 
 #view{
@@ -26,13 +74,11 @@ h1{
 }
 
 #form{
-  	border:dotted black 1px;
-  	height:40vw;
-	margin:25px auto 25px auto;
+  	height:36vw;
+	margin:0vw auto 0vw auto;
  	padding:50px auto 50px auto;
 
  	form{
- 	margin-top:2vw;
  	margin-left:auto;
  	margin-right:auto;
 	text-align:center;
@@ -52,14 +98,14 @@ h1{
 			width:65%;
 			height:5vw;
 			margin-top:5vw;
+			margin-bottom:5vw;
 		}
 	}	
  }
 	
 #result{
-  	border:dotted black 1px;
-  	height:40vw;
-	margin:25px auto 25px auto;
+  	height:36vw;
+	margin:0vw auto 0vw auto;
  	padding:50px auto 50px auto;
  }
 
