--- a/public/Sass/master.scss
+++ b/public/Sass/master.scss
@@ -107,6 +107,36 @@ h1{
   	height:36vw;
 	margin:0vw auto 0vw auto;
  	padding:50px auto 50px auto;
+
+ 	.googleimages{
+ 		display:inline-block;
+ 		width:10vw;
+ 		height:10vw;
+ 		overflow:hidden;
+ 		margin:20px;
+ 	}
+
+ blockquote {
+	  display: inline-block;
+	  font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
+	  font-size: 12px;
+	  font-weight: bold;
+	  line-height: 16px;
+	  border-color: #eee #ddd #bbb;
+	  border-radius: 5px;
+	  border-style: solid;
+	  border-width: 1px;
+	  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+	  margin: 10px 5px;
+	  padding: 0 16px 16px 16px;
+	  max-width: 468px;
+}
+
+ p {
+	  font-size: 16px;
+	  font-weight: normal;
+	  line-height: 20px;
+}
  }
 
 
