--- a/public/css/master.css
+++ b/public/css/master.css
@@ -80,3 +80,9 @@ h1 {
   height: 36vw;
   margin: 0vw auto 0vw auto;
   padding: 50px auto 50px auto; }
+  #result .googleimages {
+    display: inline-block;
+    width: 10vw;
+    height: 10vw;
+    overflow: hidden;
+    margin: 20px; }
