our images added

--- a/public/views/about.html
+++ b/public/views/about.html
@@ -3,6 +3,12 @@
 
 <p> Hello</p>
 
+<img src="../images/jazib.jpg" class = "profile">
+
+<img src="../images/katie.jpg" class = "profile">
+
+<img src="../images/neal.jpg" class = "profile">
+
 
 
 
