--- a/public/views/about.html
+++ b/public/views/about.html
@@ -1,17 +1,28 @@
 <body>
-<div id= "about" ng-controller= "aboutController">
+<div id= "aboutview" ng-controller= "aboutController">
 
-<p> Hello</p>
+<h2>The Developers</h2>
 
-<img src="../images/jazib.jpg" class = "profile">
+<p></p>
 
-<img src="../images/katie.jpg" class = "profile">
-
-<img src="../images/neal.jpg" class = "profile">
-
-
-
-
+<div class="bios">
+<h3>Jazib</h3>
+<img src="../images/jazib.jpg">
+<br>
+<a href="#">github</a>
+</div>
+<div class="bios">
+<h3>Katie</h3>
+<img src="../images/katie.jpg">
+<br>
+<a href="#">github</a>
+</div>
+<div class="bios">
+<h3>Neal</h3>
+<img src="../images/neal.jpg">
+<br>
+<a href="#">github</a>
+</div>
 
 
 
