--- a/public/css/master.css
+++ b/public/css/master.css
@@ -80,9 +80,35 @@ h1 {
   height: 36vw;
   margin: 0vw auto 0vw auto;
   padding: 50px auto 50px auto; }
+  #result #picture {
+    display: inline-block; }
   #result .googleimages {
     display: inline-block;
     width: 10vw;
     height: 10vw;
     overflow: hidden;
     margin: 20px; }
+  #result blockquote {
+    display: inline-block;
+    font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    line-height: 16px;
+    border-color: #eee #ddd #bbb;
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 1px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+    margin: 10px 5px;
+    padding: 0 16px 16px 16px;
+    max-width: 468px; }
+  #result p {
+    font-size: 16px;
+    font-weight: normal;
+    line-height: 20px; }
+
+#aboutview h2 {
+  text-align: center; }
+
+#aboutview .bios {
+  display: inline-block; }
