--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,5 +1,8 @@
 body {
-  background-color: white; }
+  background-image: url("images/background.jpg");
+  background-size: cover;
+	background-repeat: no-repeat;
+	background-attachment: fixed; } 
 
 a {
   text-decoration: none;
