--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,8 +1,10 @@
 body {
-  background-image: url("images/background.jpg");
+  background-image: url("../images/background.jpg");
   background-size: cover;
 	background-repeat: no-repeat;
-	background-attachment: fixed; } 
+	background-attachment: fixed;
+  margin: 0px; }
+
 
 a {
   text-decoration: none;
@@ -54,6 +56,7 @@ h1 {
   width: 75%;
   margin-left: auto;
   margin-right: auto;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   background-color: #0d97ff; }
 
 #form {
