added link wrapper to photos, and twitter html on results view

--- a/public/Sass/master.scss
+++ b/public/Sass/master.scss
@@ -1,5 +1,9 @@
 body{
-	background-color:white;
+	background-image: url("../images/background.jpg");
+  	background-size: cover;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+  	margin: 0px;
 }
 
 a {
