--- a/public/views/result.html
+++ b/public/views/result.html
@@ -8,23 +8,15 @@
 								<a href="{{photo}}"><img class="googleimages" ng-src="{{photo}}"></a>
 
 						</div>
-						<div id="tweet">
-						<!--<blockquote>
+						<div id="tweet" ng-repeat="tweet in tweets">
+						<blockquote>
+								<img ng-src="{{tweet.profile_image_url}}">
 								<h3>{{tweet.screen_name}}</h3>
 							<p>
 								{{tweet.text}}
 							</p>
 							{{tweet.created_at}}
 						</blockquote>
-						<blockquote>-->
-						<blockquote>
-								<h3>smokedogg420</h3>
-							<p>
-								yo what up doh those lions beat dem boys up!!!
-							</p>
-							Dec 12th 2016
-						</blockquote>
-
 						</div>
 
 				</div>
