--- a/public/views/about.html
+++ b/public/views/about.html
@@ -1,25 +1,25 @@
 <body>
-<div id= "aboutview" ng-controller= "aboutController">
+<div id= "aboutview" style="overflow: scroll;" ng-controller= "aboutController">
 
-<h2>The Developers</h2>
+<h2>The Developers &#8595;</h2>
 
 <p></p>
 
 <div class="bios">
 <h3>Jazib</h3>
-<img src="../images/jazib.jpg">
+<img src="../images/jazib.jpg" class= "bio-image">
 <br>
 <a href="#">github</a>
 </div>
 <div class="bios">
 <h3>Katie</h3>
-<img src="../images/katie.jpg">
+<img src="../images/katie.jpg" class= "bio-image">
 <br>
 <a href="#">github</a>
 </div>
 <div class="bios">
 <h3>Neal</h3>
-<img src="../images/neal.jpg">
+<img src="../images/neal.jpg" class= "bio-image">
 <br>
 <a href="#">github</a>
 </div>
