--- a/public/views/result.html
+++ b/public/views/result.html
@@ -8,8 +8,9 @@
 								<a href="{{photo}}"><img class="googleimages" ng-src="{{photo}}"></a>
 
 						</div>
-						<div id="tweet"  ng-repeat="tweet in tweets">
+						<div id="tweet" ng-repeat="tweet in tweets">
 						<blockquote>
+								<img ng-src="{{tweet.profile_image_url}}">
 								<h3>{{tweet.screen_name}}</h3>
 							<p>
 								{{tweet.text}}
