--- a/public/views/result.html
+++ b/public/views/result.html
@@ -1,7 +1,7 @@
 <body>
 
 
-				<div id="result" style="overflow: scroll;" ng-controller="resultController">
+				<div id="result"  ng-controller="resultController">
 
 						<div id="picture" ng-repeat="photo in photos">
 
