--- a/public/views/result.html
+++ b/public/views/result.html
@@ -5,7 +5,7 @@
 
 						<div id="picture" ng-repeat="photo in photos">
 
-								<a href="{{photo}}"><img class="googleimages" ng-src="{{photo}}"></a>
+								<a target="_blank" href="{{photo}}"><img class="googleimages" ng-src="{{photo}}"></a>
 
 						</div>
 						<div id="tweet" ng-repeat="tweet in tweets">
