--- a/public/css/master.css
+++ b/public/css/master.css
@@ -103,7 +103,7 @@ h1 {
     margin: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
   #result blockquote {
-    display: inline-block;
+
     color:grey;
     font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
     font-size: 12px;
@@ -115,7 +115,7 @@ h1 {
     border-style: solid;
     border-width: 1px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin: 10px 5px;
+    margin: auto;;
     padding: 16px 16px 16px 16px;
     max-width: 468px; }
   #result blockquote img{
