--- a/public/views/about.html
+++ b/public/views/about.html
@@ -2,11 +2,11 @@
     <div id= "aboutview" ng-controller= "aboutController">
         <!--style="overflow: scroll;"-->
 
-        <h2>The Developers &#8595;</h2>
-
-        <p></p>
+        <img src="../images/group.png" id= "group-image">
 
     <div class="bios">
+
+
           <h3>Jazib</h3>
               <img src="../images/jazib.jpg" class= "bio-image">
               <br>
