--- a/public/views/about.html
+++ b/public/views/about.html
@@ -22,7 +22,7 @@
           </div>
           <div class="bios">
               <h3>Katie</h3>
-                  <img src="../images/katie.jpg" class= "bio-image">
+                  <img src="../images/katie1.jpg" class= "bio-image">
               <br>
                 <div class="social">
                         <a href="https://github.com/kkerkman">
